task id 4177053 fixed align ment of modal table

--- a/public/assets/dashboard/css/dk-style.css
+++ b/public/assets/dashboard/css/dk-style.css
@@ -6562,6 +6562,11 @@ th {
     overflow: auto;
 }
 
+.common_accordian_table td,
+th {
+    text-align: center
+}
+
 .common_accordian_table td {
     border: 0px;
 }
